--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,14 @@
 apply plugin: 'com.android.application'
+apply plugin: 'me.tatarka.retrolambda'
+
 
 android {
-    compileSdkVersion 25
+    compileSdkVersion 23
     buildToolsVersion "25.0.2"
     defaultConfig {
         applicationId "com.cxing.mygank"
         minSdkVersion 14
-        targetSdkVersion 25
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -17,6 +19,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    retrolambda {
+        javaVersion JavaVersion.VERSION_1_7
+    }
 }
 
 dependencies {
@@ -25,4 +36,27 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     testCompile 'junit:junit:4.12'
+
+    //log
+    compile 'com.orhanobut:logger:1.15'
+    //gson
+    compile 'com.google.code.gson:gson:2.4'
+    //disk key/value
+    compile 'com.anupcowkur:reservoir:2.1'
+    // multie dex
+    compile 'com.android.support:multidex:1.0.1'
+
+    //common
+    compile 'com.android.support:appcompat-v7:23.1.1'
+//    compile 'com.android.support:support-v4:23.1.1'
+    compile 'com.android.support:design:23.1.1'
+//    compile 'com.android.support:cardview-v7:23.1.1'
+
+    // butterknife
+    compile 'com.jakewharton:butterknife:7.0.1'
+
+    // ReactiveX
+    compile 'io.reactivex:rxjava:1.0.16'
+    compile 'io.reactivex:rxandroid:1.0.1'
+
 }
