--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.2'
+        classpath 'me.tatarka:gradle-retrolambda:3.2.4'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -15,6 +16,8 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
+
     }
 }
 
