--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,7 +50,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
 //    compile 'com.android.support:support-v4:23.1.1'
     compile 'com.android.support:design:23.1.1'
-//    compile 'com.android.support:cardview-v7:23.1.1'
+    compile 'com.android.support:recyclerview-v7:23.1.1'
+    compile 'com.android.support:cardview-v7:23.1.1'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 
     // butterknife
     compile 'com.jakewharton:butterknife:7.0.1'
